intTests/test_parse_errors/corelexer002.log.good
Loading file "corelexer002.saw"
Stack trace:
   (builtin) in load_sawcore_from_file
   corelexer002.saw:2:1-2:46 (at top level)
Module parsing failed:
PosPair {_pos = Pos {posBase = ".", posPath = "corelexer002.sawcore", posLine = 1, posCol = 0}, val = ParseError "Unclosed Comment"}

FAILED
