intTests/test_parse_errors/corelexer002.saw
enable_experimental;
load_sawcore_from_file "corelexer002.sawcore";
